<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/item_padding_x"
    android:paddingEnd="@dimen/item_padding_x"
    android:paddingTop="@dimen/item_padding_y"
    android:paddingBottom="@dimen/item_padding_y">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:src="@drawable/default_icon"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/icon"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/item_title_margin_start"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:textColor="@color/item_title_color"
        android:textSize="14sp"
        />
    <TextView
        android:id="@+id/summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/title"
        android:maxLines="2"
        android:ellipsize="end"
        android:layout_below="@id/title"
        android:textColor="@color/item_summary_color"
        android:layout_marginTop="@dimen/item_summary_margin_top"
        android:textAppearance="?android:attr/textAppearanceListItemSecondary"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/title"
        android:layout_alignBaseline="@id/title"
        android:textColor="@color/item_version_color"
        android:layout_marginStart="@dimen/item_other_margin_start"
        android:textAppearance="?android:attr/textAppearanceListItemSmall"
        android:textSize="10sp"
        />

    <com.ice.bitmaputils.view.ProgressButton
        android:id="@+id/progress_btn"
        android:layout_width="@dimen/progress_width"
        android:layout_height="@dimen/progress_height"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        app:maxProgress="100"
        app:foreGroundColor="@color/progress_fore_color"
        app:backGroundColor="@color/progress_back_color"
        app:perTextColor="@color/progress_text_color"
        app:padding_y="@dimen/progress_padding_y"
        app:padding_x="@dimen/progress_padding_x"
        app:buttonCornerRadius="@dimen/corner_radius"
        app:download_text="@string/progress_btn_download"
        app:complete_text="@string/progress_btn_complete"
        app:cancle_text="@string/progress_btn_cancel"
        app:installed_text="@string/progress_btn_installed"
        app:text_spacing ="@dimen/text_spaces"
        app:divider_width="@dimen/progress_divdier"
        />

</RelativeLayout>